# house-votes

./: Makefile  README.md  pyproject.toml  requirements.txt
house_votes/: config.py  constants.py  dataset.py
